tests/invalid/generated_binop_lshift_none_str/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: None = None
    y: str = "hello"
    z = x << y
